# glazewm-flux

./: Cargo.toml  README.md
.github/workflows/: build.yml
example/: config.toml
src/: actions.rs  client.rs  command.rs  config.rs  hook.rs  keybindings.rs  main.rs  window.rs  workspace.rs
