[package]
name = "glazewm-flux"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5"
tray-item = "0.10"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
serde_json = "1.0.149"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"
